podConfigMap.yml
apiVersion: v1
kind: Pod
metadata:
  name: $(podName)
  namespace: $(namespace)
spec:
  containers:
  - name: $(podName)
    image: $(dockerImage)
