loadbalancerService.yml
apiVersion: v1
kind: Service
metadata:
    name: XXXXX
    namespace: XXXXX
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: XXXXX
    port: 80
    targetPort: 80
  selector:
    app: XXXXX
  type: LoadBalancer
