service.yml
apiVersion: v1
kind: Service
metadata:
  name: $(serviceName)
  namespace: $(namespace)
  annotations:
    konghq.com/protocol: http
spec:
  selector:
    app: $(podName)
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: $(containerPort)
