kongIngressController.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: XXXXX
  namespace: XXXXX
  labels:
    app: XXXXX
spec:
  replicas: 1
  selector:
    matchLabels:
      app: XXXXX
  template:
    metadata:
      labels:
        app: XXXXX
    spec:
      containers:
      - name: XXXXX
        image: XXXXX
        ports:
        - name: XXXXX
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: XXXXX
  namespace: XXXXX
  annotations:
    konghq.com/protocol: http
spec:
  selector:
    app: XXXXX
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-XXXXX
  namespace: XXXXX
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/protocol: http
spec:
  ingressClassName: kong
  rules:
  - host: "(XXXXX.elb.us-east-1.amazonaws.com) or (XXXXX.domain.com)"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: XXXXX
            port:
              number: 80
